[metadata]
name = rfc-extract
version = attr: rfc_extract.__version__
author = Martin Thomson
author_email = mt@lowentropy.net
description = Extract sourcecode and artwork from RFCs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/martinthomson/rfc-extract
project_urls =
    Bug Tracker = https://github.com/martinthomson/rfc-extract/issues
classifiers =
    Operating System :: OS Independent
    Environment :: Console
    Programming Language :: Python :: 3.7
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License

[options]

packages = find:
python_requires = >=3.7

[options.extras_require]
dev = mypy; black

[options.entry_points]
console_scripts =
    rfc-extract = rfc_extract:main

